# bam_readgroup_to_json

./: .cruft.json  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
bam_readgroup_to_json/: __init__.py  __main__.py  extract.py  legacy.py  main.py  utils.py
docker/: Dockerfile
tests/: test_main.py
tests/unit/: test_main.py
